--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,30 @@
 <resources>
+
     <string name="app_name">Asteroid Radar</string>
 
-    <string name="next_week_asteroids">View week asteroids</string>
-    <string name="today_asteroids">View today asteroids</string>
-    <string name="saved_asteroids">View saved asteroids</string>
-    <string name="close_approach_data_title">Close approach date</string>
-    <string name="absolute_magnitude_title">Absolute magnitude</string>
-    <string name="estimated_diameter_title">Estimated diameter</string>
-    <string name="relative_velocity_title">Relative velocity</string>
-    <string name="distance_from_earth_title">Distance from earth</string>
-    <string name="astronomical_unit_format">%f au</string>
-    <string name="km_unit_format">%f km</string>
-    <string name="km_s_unit_format">%f km/s</string>
-    <string name="image_of_the_day">Image of the Day</string>
-    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
-    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
-    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
-    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
-    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
-    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
+    <!-- Filter Asteroid string-->
+    <string name="text_filter_week">View week asteroids</string>
+    <string name="text_filter_today">View today asteroids</string>
+    <string name="text_filter_saved">View saved asteroids</string>
+
+    <!-- Main Screen string-->
+    <string name="text_empty_picture_of_today">This is NASA\'s picture of day, showing nothing yet</string>
+    <string name="text_format_nasa_picture_of_day">NASA\'s picture of day: %s</string>
+
+    <!-- Detail Screen string-->
+    <string name="text_close_approach_date">Close approach date</string>
+    <string name="text_absolute_magnitude">Absolute magnitude</string>
+    <string name="text_estimated_diameter">Estimated diameter</string>
+    <string name="text_relative_velocity">Relative velocity</string>
+    <string name="text_distance_from_earth">Distance from earth</string>
+    <string name="text_description_astronomical_unit_explanation_button">Astronomical unit definition</string>
+    <string name="text_description_potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
+    <string name="text_description_not_hazardous_asteroid_image">Not hazardous asteroid image</string>
+    <string name="text_astronomical_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
+
+    <!-- Unit Format string-->
+    <string name="text_format_astronomical_unit">%f au</string>
+    <string name="text_format_km_unit">%f km</string>
+    <string name="text_format_km_s_unit">%f km/s</string>
+
 </resources>
