feat: Migrate to Jetpack Compose and remove legacy UI components
- Replace `MainActivity`, `MainFragment`, and `DetailFragment` with Compose equivalents.
- Remove `activity_main.xml`, `fragment_main.xml`, `fragment_detail.xml`, and `item_asteroid.xml`.
- Introduce `MainComposeActivity`, `AsteroidApp`, and `AsteroidAppTopBar` for Compose UI.
- Add `dimenToSp` for dimension conversion in Compose.
- Update `AndroidManifest.xml` to use `MainComposeActivity` as the launcher.
- Remove all Base UI components (`AsteroidItemAdapter`, `BaseRecyclerViewAdapter`, `DataBindingViewHolder`).
- Add the new string "no_data" and  "text_back_button" in strings.
- Remove the not used menu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
 
     <string name="app_name">Asteroid Radar</string>
+    <string name="text_back_button">Back</string>
+    <string name="text_asteroid_detail">Asteroid Detail</string>
 
     <!-- Filter Asteroid string-->
     <string name="text_filter_week">View week asteroids</string>
@@ -26,5 +28,6 @@
     <string name="text_format_astronomical_unit">%f au</string>
     <string name="text_format_km_unit">%f km</string>
     <string name="text_format_km_s_unit">%f km/s</string>
+    <string name="no_data">No Data\n</string>
 
 </resources>
