--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <!-- Main Screen string-->
     <string name="text_empty_picture_of_today">This is NASA\'s picture of day, showing nothing yet</string>
     <string name="text_format_nasa_picture_of_day">NASA\'s picture of day: %s</string>
+    <string name="text_description_loading_image">Loading image</string>
 
     <!-- Detail Screen string-->
     <string name="text_close_approach_date">Close approach date</string>
