refactor: Update Compose BOM to the  last   stable version, and Migrate to Material Symbols
Key changes:
- The Compose BOM version is updated from `2025.09.00` to `2026.01.01` in `libs.versions.toml`.
- New vector drawables `ic_arrow_back.xml` and `ic_more_vert.xml` are added.
- `AsteroidApp.kt` is updated to use `painterResource` with the new local drawables instead of `ImageVector` from `material.icons`.
- The `TopAppBarColors` are updated from `centerAlignedTopAppBarColors` to `topAppBarColors`.
- A new string resource `text_menu_options` is added for the "More options" icon's content description.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 
     <string name="app_name">Asteroid Radar</string>
     <string name="text_back_button">Back</string>
+    <string name="text_menu_options">More options</string>
     <string name="text_asteroid_detail">Asteroid Detail</string>
 
     <!-- Filter Asteroid string-->
