feat: Add error state to home screen
This commit introduces an error state for the home screen, which is displayed when data loading fails.

The key changes are:
- A new `ErrorScreen` composable is created to show a broken image icon and an error message.
- The `HomeScreen` composable is refactored to be stateless. It now receives `isLoading` and `isError` booleans to determine which state to display (loading, error, or success).
- The direct dependency on `MainViewModel` is removed from `HomeScreen` to improve testability and previewing.
- A new string resource for the error message has been added.
- Previews for the loading and error states have been added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="text_empty_picture_of_today">This is NASA\'s picture of day, showing nothing yet</string>
     <string name="text_format_nasa_picture_of_day">NASA\'s picture of day: %s</string>
     <string name="text_description_loading_image">Loading image</string>
+    <string name="text_description_error">Something went wrong. Please try again later.</string>
 
     <!-- Detail Screen string-->
     <string name="text_close_approach_date">Close approach date</string>
